--- a/App.razor
+++ b/App.razor
@@ -1,10 +1,8 @@
 ﻿<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" />
+        <RouteView RouteData="@routeData"/>
     </Found>
     <NotFound>
-        <LayoutView>
-            <p>Sorry, there's nothing at this address.</p>
-        </LayoutView>
+            <p>Sorry, we haven't found any pizzas here.</p>
     </NotFound>
 </Router>
