--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,11 +1,28 @@
 @page "/"
-
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
 @using BlazingPizza.Services
 @inject OrderState OrderState
+@using BlazingPizza.Model
+
+
 
 <div class="main">
+    <div class="top-bar">
+        <a class="logo" href="checkout">
+            <img src="img/logo.svg" />
+        </a>
+
+        <NavLink href="" class="nav-tab" Match="NavLinkMatch.All">
+            <img src="img/pizza-slice.svg" />
+            <div>Get Pizza</div>
+        </NavLink>
+
+        <NavLink href="myorders" class="nav-tab">
+            <img src="img/bike.svg" />
+            <div>My Orders</div>
+        </NavLink>
+    </div>
     <h1>Blazing Pizzas</h1>
     <br />
     <br />
